@@ -1,3 +1,8 @@
+2004-08-16  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/components/http.py:
+	  get rid of traceback when no mimetype yet
+
 2004-08-13  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* doc/reference/Makefile.am:
